syntax = "proto3";

package predictor;

import "message.proto";

service ObiPredictor {
    rpc RequestPrediction(PredictionRequest) returns (PredictionResponse) {}
    rpc CollectAutoscalerData(AutoscalerData) returns (EmptyResponse) {}
}

message AutoscalerData {
    int32 Nodes = 1;
    int32 ScalingFactor = 2;
    model.HeartbeatMessage MetricsBefore = 3;
    model.HeartbeatMessage MetricsAfter = 4;
	float PerformanceBefore = 5;
	float PerformanceAfter = 6;
}

// Request/Response messages

message PredictionRequest {
    model.HeartbeatMessage Metrics = 1;
    string JobFilePath = 2;
    string JobArgs = 3;
}

message PredictionResponse {
    int32 Duration = 1;
    float FailureProbability = 2;
    string Label = 3;
}

message EmptyResponse {

}
